SP-18: Added structur subcriptions, ext connections etc